--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -42,7 +42,7 @@
             android:icon="@drawable/contactuss"
             android:title="About us" />
         <item
-            android:id="@+id/nav_c"
+            android:id="@+id/nav_help"
             android:icon="@drawable/contactuss"
             android:title="Help" />
         <item
