--- a/app/src/main/res/layout/create_activity.xml
+++ b/app/src/main/res/layout/create_activity.xml
@@ -83,6 +83,7 @@
                                 android:layout_weight="0.8" />
 
                             <TextView
+                                android:id="@+id/private_selection"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="0.2"
@@ -231,6 +232,28 @@
                             android:textSize="13dp" />
 
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_gravity="right"
+                        android:gravity="right"
+                        android:layout_margin="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <Button
+                            android:text="Active"
+                            android:textAllCaps="false"
+                            android:layout_weight="0.50"
+                            android:textColor="#fff"
+                            android:layout_marginRight="5dp"
+                            android:background="@drawable/bgcolor"
+                            android:layout_width="wrap_content"
+                            android:layout_height="35dp" />
+                    </LinearLayout>
+
+
+
 
                     <Button
                         android:id="@+id/btn_dialog"
