--- a/app/src/main/res/layout/guest_event_screen.xml
+++ b/app/src/main/res/layout/guest_event_screen.xml
@@ -49,6 +49,25 @@
                     </LinearLayout>
                 </android.support.v7.widget.CardView>
 
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_gravity="right"
+                android:gravity="right"
+                android:layout_margin="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:text="Join"
+                    android:textAllCaps="false"
+                    android:layout_weight="0.50"
+                    android:textColor="#fff"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/bgcolor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp" />
+            </LinearLayout>
+
                 <LinearLayout
                     android:weightSum="1"
                     android:layout_margin="10dp"
