--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -46,7 +46,7 @@
             android:icon="@drawable/contactuss"
             android:title="Help" />
         <item
-            android:id="@+id/nav_con"
+            android:id="@+id/nav_feedback"
             android:icon="@drawable/contactuss"
             android:title="Feedback" />
 
